More tweaks to fit my usage

--- a/server-ui-template.yaml
+++ b/server-ui-template.yaml
@@ -1,153 +1,1 @@
-kind: Template
-apiVersion: v1
-template: oshinko
-metadata:
-  name: oshinko
-objects:
-
-- kind: Service
-  apiVersion: v1
-  metadata:
-    name: ${OSHINKO_SERVER_NAME}
-    labels:
-      name: ${OSHINKO_SERVER_NAME}
-  spec:
-    ports:
-      - name: o-rest-port
-        protocol: TCP
-        port: 8080
-        targetPort: 8080
-    selector:
-      name: ${OSHINKO_SERVER_NAME}
-
-- kind: DeploymentConfig
-  apiVersion: v1
-  metadata:
-    name: ${OSHINKO_SERVER_NAME}
-  spec:
-    strategy:
-      type: Rolling
-    triggers:
-      - type: ConfigChange
-    replicas: 1
-    selector:
-      name: ${OSHINKO_SERVER_NAME}
-    template:
-      metadata:
-        labels:
-          name: ${OSHINKO_SERVER_NAME}
-      spec:
-        containers:
-          - name: ${OSHINKO_SERVER_NAME}
-            image: ${OSHINKO_SERVER_IMAGE}
-            env:
-              - name: OSHINKO_SERVER_PORT
-                value: "8080"
-              - name: OSHINKO_REST_POD_NAME
-                valueFrom:
-                  fieldRef:
-                    fieldPath: metadata.name
-              - name: OSHINKO_CLUSTER_NAMESPACE
-                valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.namespace
-              - name: OSHINKO_CLUSTER_IMAGE
-                value: ${OSHINKO_CLUSTER_IMAGE}
-              - name: OSHINKO_WEB_NAME
-                value: ${OSHINKO_WEB_NAME}
-            ports:
-              - name: o-rest-port
-                containerPort: 8080
-                protocol: TCP
-        serviceAccount: oshinko
-
-- kind: DeploymentConfig
-  apiVersion: v1
-  metadata:
-    name: ${OSHINKO_WEB_NAME}
-    labels:
-      name: ${OSHINKO_WEB_NAME}
-  spec:
-    replicas: 1
-    selector:
-      name: ${OSHINKO_WEB_NAME}
-    strategy:
-      type: Rolling
-    triggers:
-      - type: ConfigChange
-    template:
-      metadata:
-        labels:
-          name: ${OSHINKO_WEB_NAME}
-      spec:
-        containers:
-          - name: ${OSHINKO_WEB_NAME}
-            image: ${OSHINKO_WEB_IMAGE}
-            env:
-              - name: OPENSHIFT_OSHINKO_REST
-                value: ${OSHINKO_SERVER_NAME}
-              - name: OPENSHIFT_OSHINKO_REST_PORT
-                value: "8080"
-            ports:
-              - name: o-web-port
-                containerPort: 8080
-                protocol: TCP
-            readinessProbe:
-              failureThreshold: 3
-              httpGet:
-                path: /
-                port: 8080
-                scheme: HTTP
-              periodSeconds: 10
-              successThreshold: 1
-              timeoutSeconds: 1
-- kind: Service
-  apiVersion: v1
-  metadata:
-    name: ${OSHINKO_WEB_NAME}
-    labels:
-      name: ${OSHINKO_WEB_NAME}
-      restname: ${OSHINKO_SERVER_NAME}
-  spec:
-    ports:
-      - name: o-web-port
-        protocol: TCP
-        port: 8080
-        targetPort: 8080
-    selector:
-      name: ${OSHINKO_WEB_NAME}
-
-- kind: Route
-  apiVersion: v1
-  metadata:
-    name: ${OSHINKO_WEB_NAME}
-  spec:
-    host: ${OSHINKO_WEB_EXTERNAL_IP}
-    to:
-      kind: Service
-      name: ${OSHINKO_WEB_NAME}
-
-
-parameters:
-- name: OSHINKO_SERVER_IMAGE
-  description: Full name of the oshinko server image
-  required: true
-- name: OSHINKO_SERVER_NAME
-  description: Name of the oshinko server service
-  generate: expression
-  from: "oshinko-rest-[a-z0-9]{4}"
-  required: true
-- name: OSHINKO_CLUSTER_IMAGE
-  description: Full name of the spark image to use when creating clusters
-  required: true
-- name: OSHINKO_WEB_NAME
-  description: Name of the oshinko web service
-  generate: expression
-  from: "oshinko-web-[a-z0-9]{4}"
-  required: true
-- name: OSHINKO_WEB_IMAGE
-  description: Full name of the oshino web image
-  required: true
-- name: OSHINKO_WEB_EXTERNAL_IP
-  description: The IP address applied to the external route for the webui
-  required: true
+/home/croberts/go/src/github.com/radanalyticsio/oshinko-rest/tools/server-ui-template.yaml
